Avatar alignment fixed using modern flex box

--- a/content/stylesheets/components/_chips.scss
+++ b/content/stylesheets/components/_chips.scss
@@ -14,3 +14,9 @@
     }
   }
 }
+
+li:has(.app-author-link) {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
